CSS files updated and orginised. Some responsive codes are added.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <link rel="stylesheet" href="Stiller/Ortak.css">
     <link rel="stylesheet" href="Stiller/AnaBölüm.css">
+    <link rel="stylesheet" href="Stiller/AnaBölümGiriş.css">
+    <link rel="stylesheet" href="Stiller/AnaBölümTeknikBeceriler.css">
+    <link rel="stylesheet" href="Stiller/AnaBölümProjeler.css">
     <link rel="stylesheet" href="Stiller/AltBölüm.css">
 
     <script src="fonksiyon.js"></script>
