Some issues with responsiveness fixed.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="Stiller/AnaBölümGiriş.css">
     <link rel="stylesheet" href="Stiller/AnaBölümTeknikBeceriler.css">
     <link rel="stylesheet" href="Stiller/AnaBölümProjeler.css">
+    <link rel="stylesheet" href="Stiller/AnaBölümDil.css">
     <link rel="stylesheet" href="Stiller/AltBölüm.css">
 
     <script src="fonksiyon.js"></script>
@@ -176,16 +177,6 @@
                     <div class="ana-bölüm-dil-dil">İngilizce (B1)</div>
                 </div>
             </div>
-    
-            <div id="ana-bölüm-hobiler">
-                <div class="ana-bölüm-sayfa-başlık" id="ana-bölüm-hobiler-başlık">Hobi</div>
-                <div class="ana-bölüm-hobiler-içerik">
-                    <div class="ana-bölüm-hobiler-hobi">Bilgisayar oyunu oynamak</div>
-                    <div class="ana-bölüm-hobiler-hobi">Çizim yapmak</div>
-                    <div class="ana-bölüm-hobiler-hobi">Müzik dinleme</div>
-                    <div class="ana-bölüm-hobiler-hobi">Dizi izlemek</div>
-                </div>
-            </div>
         </div>
 
         <div class="ana-bölüm-sayfa" id="ana-bölüm-iletişim">
@@ -224,7 +215,7 @@
         <div class="alt-bölüm-ışık"><div class="alt-bölüm-buton" id="alt-bölüm-proje" onclick="sayfayaGit('ana-bölüm-projeler')">Projeler</div></div>
         <div class="alt-bölüm-ışık"><div class="alt-bölüm-buton" id="alt-bölüm-eğitim" onclick="sayfayaGit('ana-bölüm-eğitim')">Eğitim</div></div>
         <div class="alt-bölüm-ışık"><div class="alt-bölüm-buton" id="alt-bölüm-iş" onclick="sayfayaGit('ana-bölüm-iş-deneyimi')">İş Tecrübesi</div></div>
-        <div class="alt-bölüm-ışık"><div class="alt-bölüm-buton" id="alt-bölüm-dil" onclick="sayfayaGit('ana-bölüm-dil-hobi')">Dil & Hobiler</div></div>
+        <div class="alt-bölüm-ışık"><div class="alt-bölüm-buton" id="alt-bölüm-dil" onclick="sayfayaGit('ana-bölüm-dil-hobi')">Dil</div></div>
         <div class="alt-bölüm-ışık"><div class="alt-bölüm-buton" id="alt-bölüm-iletişim" onclick="sayfayaGit('ana-bölüm-iletişim')">İletişim</div></div>
     </div>
 </body>
