Sad Güneş is shown in all pages.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="Stiller/Resim.css">
     <link rel="stylesheet" href="Stiller/Ortak.css">
     <link rel="stylesheet" href="Stiller/AnaBölüm.css">
     <link rel="stylesheet" href="Stiller/AnaBölümGiriş.css">
@@ -23,6 +24,10 @@
 </head>
 
 <body>
+    <div class="resim">
+        <img src="resimler/stajyok_arkaplanlı.png" alt="staj bulamadığı için üzgün bir Güneş karakteri">
+    </div>
+
     <div class="ana-bölüm">
         <div class="ana-bölüm-sayfa" id="ana-bölüm-giriş">
             <div class="ana-bölüm-sayfa-başlık" id="ana-bölüm-giriş-başlık">
